Add AppActions interface to decouple UI controllers from application state
Introduce the AppActions interface to facilitate communication between UI controllers and the application state. Update ConfigurationController and WidgetController to utilize AppActions for window management and exit requests. Refactor WidgetApplication to implement AppActions, enhancing modularity and testability of UI components.